src/objects/Quarterly_Access_Review__c.object
<CustomObject>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Started__c</fullName>
        <label>Date Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ready_For_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in the Quarterly Review Approval Process</description>
        <inlineHelpText>Only check this box when each an updated document has been added to the review and you are ready to submit for approval</inlineHelpText>
        <label>Ready For Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ready_for_Finance_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for approval process that needs to be signed off by the financial business owner</description>
        <inlineHelpText>Only check this box when each an updated document has been added to the review and you are ready to submit for approval</inlineHelpText>
        <label>Ready for Finance Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Technology</label>
        <referenceTo>Technology__c</referenceTo>
        <relationshipLabel>Quarterly Access Reviews</relationshipLabel>
        <relationshipName>Quarterly_Access_Reviews</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Quarterly Access Review</label>
    <nameField>
        <label>Quarterly Access Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quarterly Access Reviews</pluralLabel>
    <recordTypes>
        <fullName>Finance_Technology</fullName>
        <active>true</active>
        <label>Finance Technology</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Technology</fullName>
        <active>true</active>
        <label>Sales Technology</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>